camera: add new 35mm camera app with flash and aperture animation
- Draw vintage camera with body, lens, viewfinder, and flash
- Aperture closes/opens in 300ms sequence when DOWN button pressed
- Screen flash effect synchronized with shutter
- Photo counter tracks shots taken
- Generated camera icon for menu (24px camera glyph)
- Updated asset generator to include camera icon

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -37,5 +37,9 @@ jobs:
           echo "Running flake8..."
           flake8 .
 
-      - name: Run test checks script
+      - name: Run pytest
+        run: pytest -q
+
+      - name: Run test checks script (legacy)
+        if: always()
         run: python tests/run_checks.py
