Add mypy.ini config for MicroPython-friendly type checking

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -29,9 +29,8 @@ jobs:
       - name: Run mypy (type checks)
         run: |
           echo "Running mypy..."
-          # ignore missing imports to reduce false positives in CI
-          # exclude ir-beacon and eink (contain MicroPython/hardware-specific code)
-          mypy --ignore-missing-imports badge/ tests/
+            # Configuration in mypy.ini
+            mypy badge/ tests/
 
       - name: Run flake8 (style/linting)
         run: |
