types(ci): ignore mypy errors in tests to keep CI focused on app code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,7 @@ warn_return_any = true
 warn_unused_configs = false
 allow_redefinition = true
 pretty = true
+
+[tool.mypy-tests.*]
+# Ignore type errors inside tests to keep CI signal focused on app code.
+ignore_errors = true
