types(ci): update mypy.ini to ignore errors in tests per PR workflow

--- a/mypy.ini
+++ b/mypy.ini
@@ -17,3 +17,7 @@ allow_redefinition = True
 
 # Ignore certain error codes that are not relevant for MicroPython
 disable_error_code = var-annotated,name-defined,misc
+
+[mypy-tests.*]
+# Ignore type errors inside tests; tests use dynamic monkeypatching and stubs.
+ignore_errors = True
