sync: add pyproject.toml, mypy.ini, conftest.py, and test files from PR branch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,13 +36,15 @@ exclude = [
 ]
 
 [tool.mypy]
-files = ["badge", "tests"]
 python_version = "3.11"
-strict_optional = false
-check_untyped_defs = false
-disallow_untyped_defs = false
 ignore_missing_imports = true
+follow_imports = "skip"
+warn_unused_ignores = false
+warn_redundant_casts = false
 warn_return_any = true
+warn_unused_configs = false
+allow_redefinition = true
+pretty = true
 
 [[tool.mypy.overrides]]
 module = "tests.*"
