fix: update CI mypy to only check badge/ and tests/

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,5 @@ jobs:
 
       - name: Mypy (types)
         run: |
-          mypy .
+          # Configuration in mypy.ini and pyproject.toml
+          mypy badge/ tests/
